compiler/tests/en/errors/pure_print.salam
// EXPECT: E012
pure func shout(x i32) i32:
    println(x)
    ret x
end

func main:
    println(shout(2))
end
